@@ -21,7 +21,6 @@ package org.apache.parquet;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
-import java.util.Arrays;
 import java.util.List;
 import org.junit.Test;
 
@@ -51,7 +50,7 @@ public class SemanticVersionTest {
 
   @Test
   public void testSemverPrereleaseExamples() throws Exception {
-    List<String> examples = Arrays.asList(
+    List<String> examples = List.of(
         "1.0.0-alpha",
         "1.0.0-alpha.1",
         "1.0.0-alpha.beta",
